:package: Sessao Conhecimentos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                 <span>Fechar</span>
             </div>
 
-
             <header>
                 <div class="img-wrapper">
                     <img src="Imagens/Background.jpg" alt="">
@@ -31,7 +30,7 @@
                 </div>
             </header>
 
-            <div class="sidebar">
+            <aside class="sidebar">
                 <nav>
                     <ul class="menu">       
                         <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -46,7 +45,99 @@
                     <a href="#"><i class="fab fa-github-alt"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                 </div>
-            </div>
+            </aside>
+
+            <section class="sessao-conhecimento">
+                <div class="sessao-header">
+                    <h1>Conhecimentos</h1>
+                </div>
+
+                <div class="conhecimentos">
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fab fa-html5"></i>
+                            <h3>HTML 5</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, quidem quam reru
+                                m eum odio saepe laboriosam tenetur ipsam eaque ratione dolores repudiandae explicabo
+                                quae ex ut similique minus neque architecto!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fab fa-css3-alt"></i>
+                            <h3>CSS</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                Praesentium neque qui incidunt debitis provident placeat dolores 
+                                sunt necessitatibus vel quo sint quos eveniet beatae, at quasi. Placeat rerum iusto quas!
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fas fa-pencil-alt"></i>
+                            <h3>Design</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos vitae, 
+                                amet porro sequi nesciunt libero itaque! Officia pariatur asperiores fugit quia. 
+                                Dolor quia ratione autem a est, veritatis eum repudiandae?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fab fa-js"></i>
+                            <h3>Javascript</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos vitae, 
+                                amet porro sequi nesciunt libero itaque! Officia pariatur asperiores fugit quia. 
+                                Dolor quia ratione autem a est, veritatis eum repudiandae?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fab fa-bootstrap"></i>
+                            <h3>Boostrap</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos vitae, 
+                                amet porro sequi nesciunt libero itaque! Officia pariatur asperiores fugit quia. 
+                                Dolor quia ratione autem a est, veritatis eum repudiandae?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i class="fab fa-github"></i>
+                            <h3>Git e GitHub</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos vitae, 
+                                amet porro sequi nesciunt libero itaque! Officia pariatur asperiores fugit quia. 
+                                Dolor quia ratione autem a est, veritatis eum repudiandae?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="conhecimentos-img-wrapper">
+                        <img src="imagens/conhecimentos.png" alt="Imagem Conhecimento">
+                    </div>
+
+                </div>
+            </section>
+            
         </div>
     </body>
 
