--- a/index.html
+++ b/index.html
@@ -137,7 +137,58 @@
 
                 </div>
             </section>
-            
+
+            <section class="sessao-projetos">
+                <div class="sessao-header">
+                    <h1>Projetos</h1>
+                </div>
+                <div class="projetos">
+                    
+                    <div class="card">
+
+                        <div class="card-img-wrapper">
+                            <img src="./Imagens/proj1.jpg" alt="Imagem Projeto ToDo">
+                        </div>
+                        <div class="card-info">
+                            <h2>ToDo List</h2>
+                            <h3>Javascript</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Pariatur cum sunt doloribus repellendus dolorem blanditiis 
+                            dolores sapiente ad repudiandae ex.</p>
+                            <button>Saiba Mais</button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img-wrapper">
+                            <img src="./Imagens/proj2.jpg" alt="Imagem Projeto Maratona">
+                        </div>
+                        <div class="card-info">
+                            <h2>Maratona</h2>
+                            <h3>HTML, CSS</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Pariatur cum sunt doloribus repellendus dolorem blanditiis 
+                                dolores sapiente ad repudiandae ex.</p>
+                            <button>Saiba Mais</button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img-wrapper">
+                            <img src="./Imagens/proj3.jpg" alt="Imagem Projeto CasaBela">
+                        </div>
+                        <div class="card-info">
+                            <h2>Casa Bela</h2>
+                            <h3>HTML</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Pariatur cum sunt doloribus repellendus dolorem blanditiis 
+                                dolores sapiente ad repudiandae ex.</p>
+                            <button>Saiba Mais</button>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
         </div>
     </body>
 
