--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <span>Fechar</span>
             </div>
 
-            <header>
+            <header id="Home">
                 <div class="img-wrapper">
                     <img src="Imagens/Background.jpg" alt="">
                 </div> 
@@ -34,11 +34,11 @@
             <aside class="sidebar">
                 <nav>
                     <ul class="menu">       
-                        <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                        <li class="menu-item"><a href="#Home" class="menu-link">Home</a></li>
+                        <li class="menu-item"><a href="#Conhecimentos" class="menu-link">Conhecimento</a></li>
+                        <li class="menu-item"><a href="#Projetos" class="menu-link">Projetos</a></li>
+                        <li class="menu-item"><a href="#Contato" class="menu-link">Contato</a></li>
+                        <li class="menu-item"><a href="#Orcamento" class="menu-link">Orçamento</a></li>
                     </ul>
                 </nav>
                 <div class="social-media">
@@ -48,7 +48,7 @@
                 </div>
             </aside>
 
-            <section class="sessao-conhecimento">
+            <section class="sessao-conhecimento" id="Conhecimentos">
                 <div class="sessao-header">
                     <h1>Conhecimentos</h1>
                 </div>
@@ -139,7 +139,7 @@
                 </div>
             </section>
 
-            <section class="sessao-projetos">
+            <section class="sessao-projetos" id="Projetos">
                 <div class="sessao-header">
                     <h1>Projetos</h1>
                 </div>
@@ -191,7 +191,7 @@
                 </div>
             </section>
 
-            <section class="sessao-contato">
+            <section class="sessao-contato" id="Contato">
                 <div class="contato-wrapper">
                     <div class="contato-left"></div>
                     <div class="contato-right">
@@ -215,7 +215,7 @@
                 </div>
             </section>
 
-            <section class="sessao-orcamento">
+            <section class="sessao-orcamento" id="Orcamento">
                 <div class="orcamento-wrapper">
                     <h1>Faça um Orçamento</h1>
                     <form>
@@ -241,6 +241,25 @@
                     </form>
                 </div>
             </section>
+
+            <footer>
+                <div class="footer-content">
+                    <p>
+                        Copyrigth &copy; 2020, ETECIA DS - Todos os direitos reservados
+                    </p>
+                    <div class="social-list">
+                        <ul>
+                            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </footer>
+
+            <a href="#Home" id="link-topo">
+                <i class="fas fa-arrow-up"></i>
+            </a>
         </div>
     </body>
 
